--- a/token.html
+++ b/token.html
@@ -82,6 +82,7 @@
             "tokenNumber":this.tokenNumber
           }
         }));
+        this.tokenNumber='';
       }
     }
     window.customElements.define(TokenElement.is,TokenElement);
