--- a/view_06.html
+++ b/view_06.html
@@ -6,6 +6,20 @@
   <template>
     <style>
 
+
+
+    :root{
+      --text-color:#666;
+      --main-color:#2484cc
+    }
+
+
+    h2{
+      color:var(--main-color);
+      font-weight: normal;
+    }
+
+
     .data{
       display:grid;
       border-radius: 5px;
@@ -14,6 +28,7 @@
     }
     .data label{
       border-bottom: 1px solid #666;
+      padding:10px 5px;
     }
 
     .btn_confirm{
